--- a/style.css
+++ b/style.css
@@ -5,4 +5,25 @@ h1 {
   display: flex;
   justify-content: center;
   font-family: sans-serif;
+  margin-top: 80px;
+}
+.container {
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+form {
+  display: flex;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 5px;
+}
+
+button {
+  margin-left: 10px;
+  padding: 5px 10px;
 }
