--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ h1 {
   justify-content: center;
   font-family: sans-serif;
   margin-top: 80px;
+  font-family: "BebasNeue", sans-serif;
 }
 .container {
   margin-top: 100px;
