--- a/styles/style.css
+++ b/styles/style.css
@@ -18,23 +18,27 @@ h1 {
   font-size: 55px;
   color: rgb(185, 248, 227);
   text-shadow: 3px 3px #1ee5d8, -5px 6px 30px #1ee5d8;
+  transition: margin-top 0.3s ease;
 }
 .container {
   margin-top: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: margin-top 0.3s ease;
 }
 
 form {
   display: flex;
   border-radius: 10px;
+  transition: max-width 0.3s ease;
 }
 
 input[type="text"] {
   width: 100%;
   padding: 10px;
   border-radius: 5px;
+  transition: width 0.3s ease;
 }
 
 button {
@@ -56,4 +60,36 @@ button:hover {
   color: #fff;
   transform: scale(1.1); /* Increasing the size on hover */
   cursor: pointer;
+}
+
+@media (min-width: 555px) {
+  /* Styles for screen size larger than 500px */
+  body {
+    margin: 20px;
+  }
+
+  .container {
+    margin-top: 150px;
+  }
+
+  form {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1001px) {
+  /* Styles for screen size larger than 1000px */
+  body {
+    margin: 40px;
+  }
+
+  .container {
+    margin-top: 190px;
+  }
+
+  form {
+    max-width: 800px;
+    margin: 0 auto;
+  }
 }
