--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/BebasNeue-Regular.ttf" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <!-- <link rel="stylesheet" href="../public/css/main.css" /> -->
     <title>YT to MP3</title>
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/BebasNeue-Regular.ttf" />
   </head>
   <body>
     <h1>YouTube To MP3 Converter</h1>
