--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: Bebas;
   src: url(../BebasNeue-Regular.ttf);
 }
@@ -46,7 +46,101 @@ button {
   padding: 10px 15px;
   transition: all 0.3s ease; /* Adding transition for smooth animation */
 
-  /* Default styles */
+/* Default styles */
+/* background-color: rgb(185, 248, 227);
+  border: none;
+  border-radius: 5px;
+  color: #333;
+  font-family: "Bebas", sans-serif;
+} */
+/* 
+button:hover {
+  background-color: #1ee5d8;
+  border-radius: 7px;
+  color: #fff;
+  transform: scale(1.1); Increasing the size on hover */
+/* cursor: pointer; */
+/* }
+
+@media (min-width: 500px) { */
+/* Styles for screen size larger than 500px */
+/* body {
+    margin: 20px;
+  }
+
+  .container {
+    margin-top: 150px;
+  }
+
+  form {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+} */
+
+/* @media (min-width: 1001px) { */
+/* Styles for screen size larger than 1000px */
+/* body {
+    margin: 40px;
+  }
+
+  .container {
+    margin-top: 190px;
+  }
+
+  form {
+    max-width: 800px;
+    margin: 0 auto; */
+/* }
+} */
+@font-face {
+  font-family: Bebas;
+  src: url(../BebasNeue-Regular.ttf);
+}
+
+body {
+  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+}
+
+h1 {
+  border: 1px currentColor;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+  font-family: "Bebas", sans-serif;
+  font-size: 55px;
+  color: rgb(185, 248, 227);
+  text-shadow: 3px 3px #1ee5d8, -5px 6px 30px #1ee5d8;
+  transition: margin-top 0.3s ease;
+}
+
+.container {
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: margin-top 0.3s ease;
+}
+
+form {
+  display: flex;
+  border-radius: 10px;
+  transition: max-width 0.3s ease;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  transition: width 0.3s ease;
+}
+
+button {
+  margin-left: 10px;
+  padding: 10px 15px;
+  transition: all 0.3s ease;
   background-color: rgb(185, 248, 227);
   border: none;
   border-radius: 5px;
@@ -58,18 +152,49 @@ button:hover {
   background-color: #1ee5d8;
   border-radius: 7px;
   color: #fff;
-  transform: scale(1.1); /* Increasing the size on hover */
+  transform: scale(1.1);
   cursor: pointer;
 }
 
-@media (min-width: 555px) {
-  /* Styles for screen size larger than 500px */
+@media (max-width: 520px) {
+  /* Styles for screen size smaller than or equal to 500px */
+  h1 {
+    font-size: 50px; /* Adjust the font size as desired */
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflowing text */
+    text-overflow: ellipsis; /* Show ellipsis (...) for hidden text */
+  }
+
   body {
     margin: 20px;
   }
 
   .container {
     margin-top: 150px;
+  }
+
+  form {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 499px) {
+  /* Styles for screen size smaller than or equal to 500px */
+  h1 {
+    font-size: 24px; /* Adjust the font size as desired */
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflowing text */
+    text-overflow: ellipsis; /* Show ellipsis (...) for hidden text */
+    text-shadow: 1px 1px #1ee5d8, -2px 3px 10px #1ee5d8 rounded;
+  }
+
+  body {
+    margin: 20px;
+  }
+
+  .container {
+    margin-top: 140px;
   }
 
   form {
