--- a/views/index.html
+++ b/views/index.html
@@ -20,27 +20,29 @@
 
     <script>
       $(document).ready(function(){
-          $("#myForm").on('submit', function(e){
-              e.preventDefault();
-      
-              $.ajax({
-                  url: '/convert',
-                  type: 'post',
-                  dataType: 'json',
-                  contentType: 'application/json',
-                  success: function (data) {
-                      // redirect to the mp3 file
-                      window.location.href = data.link;
-                  },
-                  error: function (err) {
-                    console.log('coming from index.html line 36', err)
-                      alert("An error occurred:", err);
-                  },
-                  data: JSON.stringify({ "url": $('#myInput').val() })
-              });
-          });
-      });
-      </script>
+    $("#myForm").on('submit', function(e){
+        e.preventDefault();
+
+        var filename = window.prompt("Enter a filename for your download");
+  
+        $.ajax({
+            url: '/convert',
+            type: 'post',
+            dataType: 'json',
+            contentType: 'application/json',
+            success: function (data) {
+                // redirect to the mp3 file
+                window.location.href = data.link;
+            },
+            error: function (err) {
+                alert("An error occurred:", err);
+            },
+            data: JSON.stringify({ "url": $('#myInput').val(), "filename": filename })
+        });
+    });
+});
+
+ </script>
  
   </body>
 </html>
