added node schedule library to clear out mp3 files directory after a specified amount of minutes has passed

--- a/views/download.html
+++ b/views/download.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Your MP3 is ready!</h1>
     <button id="download-btn">
-      <a id="download-link" href="#">Click here to download</a>
+      <a id="download-link" href="#">Click Here To Download</a>
     </button>
 
     <script>
