--- a/public/css/main.css
+++ b/public/css/main.css
@@ -157,6 +157,36 @@ button:hover {
   box-shadow: 1px 2px 1px #1ee5d8;
 }
 
+.dots-loading span {
+  display: none;
+  width: 8px;
+  height: 8px;
+  margin-right: 5px;
+  background: #1ee5d8;
+  border-radius: 50%;
+  animation: dots-loading 1.5s infinite;
+}
+
+.dots-loading span:nth-child(2) {
+  animation-delay: 0.5s;
+}
+
+.dots-loading span:nth-child(3) {
+  animation-delay: 1s;
+}
+
+@keyframes dots-loading {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
 @media (max-width: 520px) {
   /* Styles for screen size smaller than or equal to 500px */
   h1 {
