added back in the style for displaying the afterclick p tag

--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
             },
           });
           $("#myInput").val("");
-          document.getElementById("afterClick").style.display = " ease-in flex";
+          document.getElementById("afterClick").style.display = "flex";
           document.body.style.cursor = "progress";
         });
         // When some event happens...
