added some styling changes to the buttons

--- a/views/index.html
+++ b/views/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <h1>YouTube To MP3 Converter</h1>
-    <div class="container">
+    <div class="flex-container">
       <form id="myForm" autocomplete="off">
         <input type="text" id="myInput" placeholder="Enter YouTube URL" />
-        <button type="submit">Convert</button>
+        <button id="submit" type="submit">Convert</button>
       </form>
     </div>
     <p id="afterClick">Converting...</p>
