--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,6 +142,7 @@ form {
   display: flex;
   border-radius: 10px;
   transition: max-width 0.3s ease;
+  text-align: center;
 }
 
 input[type="text"] {
@@ -149,19 +150,35 @@ input[type="text"] {
   padding: 10px;
   border-radius: 5px;
   transition: width 0.3s ease;
+  margin-right: 5px;
+  max-width: 70%;
+  transition: 0.3s ease;
 }
 
 button {
-  margin-left: 10px;
+  /* margin-left: 10px; */
+  /* margin-bottom: 15px;
   padding: 10px 15px;
+  */
+  padding: 11px 16px;
   transition: all 0.3s ease;
   background-color: #1ee5d8;
   border: none;
   border-radius: 5px;
   color: #181818;
-  font-family: "Bebas", sans-serif;
+  font-family: "Bebas", sans-serif; 
 }
 
+#submit{
+  
+}
+
+.flex-container{
+  max-width: 40%;
+  display: flex;
+  justify-content: center;
+  margin-left: 30%;
+}
 button:hover {
   background-color: #1ee5d8;
   border-radius: 7px;
@@ -201,7 +218,13 @@ button:hover {
   }
 }
 
-@media (max-width: 520px) {
+@media (max-width: 550px) {
+  button{
+    padding: 11px 16px;
+  }
+  input[type="text"] {
+    font-size: 10px;
+  }
   /* Styles for screen size smaller than or equal to 500px */
   h1 {
     font-size: 50px; /* Adjust the font size as desired */
@@ -269,18 +292,40 @@ button:hover {
     margin-left: 10px;
     padding: 11px 16px;
     transition: all 0.3s ease;
-    background-color: rgb(185, 248, 227);
+    /* background-color: rgb(185, 248, 227); */
     border: none;
     border-radius: 5px;
     color: #141414;
     font-family: "Bebas", sans-serif;
   }
 }
+.btn-group{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+#convert-btn{
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  transition: 0.3s ease;
+  margin-bottom: 20px;
+}
+#convert{
+  text-decoration: none;
+  color: rgb(87, 87, 87);
+}
 
 #download-link {
   text-decoration: none;
   color: rgb(87, 87, 87);
 }
+#convert:hover {
+  text-decoration: underline;
+  color: rgb(255, 255, 255);
+  box-shadow: 1px 1px 2px #1ee5d8;
+}
+
 
 #download-link:hover {
   color: rgb(202, 249, 249);
@@ -291,6 +336,7 @@ button:hover {
   justify-content: center;
   margin: auto;
   transition: 0.3s ease;
+  margin-bottom: 20px;
 }
 
 #download-btn:hover {
