--- a/views/download.html
+++ b/views/download.html
@@ -7,10 +7,14 @@
   </head>
   <body>
     <h1>Your MP3 is ready!</h1>
+    <div class="btn-group">
     <button id="download-btn">
       <a id="download-link" download href="#">Click Here To Download</a>
     </button>
-
+    <button id="convert-btn">
+      <a id="convert" href="">Convert Another</a>
+    </button>
+  </div>
     <script>
       // Get the filename from the URL parameters and update the download link
       const params = new URLSearchParams(window.location.search);
