commented out extra button, will need to work on impelemtation later

--- a/views/download.html
+++ b/views/download.html
@@ -11,9 +11,9 @@
     <button id="download-btn">
       <a id="download-link" download href="#">Click Here To Download</a>
     </button>
-    <button id="convert-btn">
+    <!-- <button id="convert-btn">
       <a id="convert" href="">Convert Another</a>
-    </button>
+    </button> -->
   </div>
     <script>
       // Get the filename from the URL parameters and update the download link
