--- a/views/download.html
+++ b/views/download.html
@@ -11,9 +11,9 @@
     <button id="download-btn">
       <a id="download-link" download href="#">Click Here To Download</a>
     </button>
-    <!-- <button id="convert-btn">
-      <a id="convert" href="">Convert Another</a>
-    </button> -->
+    <button id="convert-btn">
+      <a id="convert" href="/">Convert Another</a>
+    </button>
   </div>
     <script>
       // Get the filename from the URL parameters and update the download link
@@ -21,6 +21,10 @@
       const filename = params.get("file");
       const linkElement = document.getElementById("download-link");
       linkElement.href = `/MP3-Files/${filename}`;
-    </script>
+      document.getElementById("convert-btn").addEventListener("click", function() {
+    window.location.href = "/";
+});
+
+   </script>
   </body>
 </html>
