updated favicon to public folder

--- a/views/download.html
+++ b/views/download.html
@@ -3,6 +3,8 @@
   <head>
     <title>Download your MP3</title>
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/icons/mp3.ico">
+
     <!-- Add your custom styles here -->
   </head>
   <body>
