--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/BebasNeue-Regular.ttf" />
+    <!-- <link rel="icon" type="image/x-icon" href="/assets/icons/mp3.ico"> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   </head>
   <body>
     <h1>YouTube To MP3 Converter</h1>
