changed titles in the view html files

--- a/views/download.html
+++ b/views/download.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Download your MP3</title>
+    <title>Download Your MP3</title>
     <link rel="stylesheet" href="/css/main.css" />
     <!-- <link rel="icon" type="image/x-icon" href="/assets/icons/mp3.ico"> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
